# google-slides-clone

./: .dockerignore  .env.example  .gitignore  Caddyfile  Makefile  docker-compose.fresh.yml  docker-compose.local.yml  docker-compose.yml  package.json  pnpm-lock.yaml
agents/capture-agent/: README.md
agents/formalization-agent/: README.md
agents/generation-agent/: README.md
agents/patch-agent/: README.md
agents/playwright-synthesis-agent/: README.md
agents/qa-agent/: README.md
agents/spec-agent/: README.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1e92573eb44b_widen_picture_column_to_text.py  470863ad601e_add_users_table.py  8bfc9de23693_add_decks_table.py  a1b2c3d4e5f6_add_presentation_collaborators.py  b2c3d4e5f6a7_add_presentation_versions.py
apps/api/app/: main.py
apps/api/app/admin/: router.py  seeds.py  service.py
apps/api/app/api/: router.py
apps/api/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/health/: router.py
apps/api/app/presentations/: models.py  router.py  schemas.py  service.py
apps/desktop/: package.json
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
deployment/smoke/: api-smoke.sh  web-smoke.sh
docker/web/: Dockerfile
docs/: jsonb-content-schema.md
scripts/bootstrap/: bootstrap_repo.py
scripts/capture/: run-computer-use.mjs
scripts/formalize/: normalize-session.mjs
(+168 files in other folders)
